# NMP3

./: CMakeLists.txt  DownloadBilibiliVideo.py  README.md  homepage.cpp  homepage.h  homepage.ui  images.qrc  images_rc.py  main.cpp
DownloadBiliBiliVideoPage/: downloadbilibilivideonode.cpp  downloadbilibilivideonode.h  downloadbilibilivideonode.ui  downloadbilibilivideopage.cpp  downloadbilibilivideopage.h  downloadbilibilivideopage.ui
MP3PlayerColumn/: mp3playercolumn.cpp  mp3playercolumn.ui  volumnslider.cpp  volumnslider.h  volumnslider.ui
MP3PlayerColumn/LyricsPlayer/: lyricsnode.cpp  lyricsnode.h  lyricsnode.ui  lyricsplayer.cpp  lyricsplayer.h  lyricsplayer.ui
MP3PlayerColumn/include/: mp3playercolumn.h
NVideoWidget/: nvideowidget.cpp  nvideowidget.h
PlayMP4Page/: displaymp4nodelist.cpp  displaymp4nodelist.h  displaymp4nodelist.ui  mp4node.cpp  mp4node.h  mp4node.ui  playmp4page.cpp  playmp4page.ui  playmp4page_ui.py
PlayMP4Page/include/: playmp4page.h
RenameSongPage/: renamesongpage.cpp  renamesongpage.h  renamesongpage.ui
RootPage/: rootpage.cpp  rootpage.h  rootpage.ui
defines/: define_DirPath.h  define_FilePath.h  define_WindowTitle.h  define_clutter.h
